# ButtplugCPP

./: .gitmodules  CMakeLists.txt
example/: main.cpp
lib/: CMakeLists.txt
lib/buttplug-rs-ffi_android/: buttplug_rs_ffi.pb.cc  buttplug_rs_ffi.pb.h
lib/dylib/: dylib.hpp
src/: ButtplugClient.cpp  ButtplugClient.h  ButtplugDevice.cpp  ButtplugDevice.h  ButtplugFFI.cpp  ButtplugFFI.h  ButtplugProto.cpp  ButtplugProto.h  CMakeLists.txt
